deps/v8/test/message/destructuring-array-non-iterable-object.out
*%(basename)s:6: TypeError: x is not iterable
var [a] = x;
          ^
TypeError: x is not iterable
    at *%(basename)s:6:11
